<resources>
    <!--    login form-->
    <!--    <string name="app_name">QL_Fresher</string>-->
    <string name="app_name">Management App</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="Cancel">Cancel</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="regiserNewUser">New User? Register Now</string>

    <!--    register-->
    <string name="tvRegister">Register</string>
    <string name="tvFullname">Fullname</string>
    <string name="tvDateOfBirth">Date of Birth</string>
    <string name="toastRegisterSuccess">Register Successfully</string>
    <string name="toastRegisterFail">Register Failed</string>

    <!--    toast-->
    <string name="toastSuccess">Login Successfully</string>
    <string name="toastLoginError">Login Failed</string>
    <string name="toastError">Error</string>
    <string name="toastForgotPass">Sent email to you</string>
    <string name="toastFillEmailForgot">Please, enter your email</string>
    <string name="toastUpdateSuccess">Updated Fresher!</string>
    <string name="toastSaveURL">Saved URL!</string>
    <string name="toastSaveCenter">Saved Center!</string>
    <string name="toastFail">Fail!</string>
    <string name="toastChangeEmail">Can not change your email!</string>
    <string name="toastChangeUser">Updated User!</string>
    <string name="toastIncorrectOldPass">Incorrect old password</string>
    <string name="toastIncorrectConfirmPass">Incorrect confirm password</string>

    <!--    menu-->
    <string name="menu_manageCenter"> Center </string>
    <string name="menu_manageFresher"> Fresher </string>
    <string name="menu_home">Home </string>
    <string name="menu_dashboard">Dashboard </string>
    <string name="menu_signout">Sign out </string>
    <string name="menu_changepassword">Change password</string>
    <string name="menu_profile">Profile </string>


    <!--    mainmenu-->
    <string name="main_funtion">All Feature </string>
    <string name="hello">Hello, </string>

    <!--    home-->
    <string name="home_manageCenter"> Center </string>
    <string name="home_manageFresher"> Fresher </string>
    <string name="home_dashboard">Dashboard </string>
    <string name="home_profile">Profile </string>

    <!--    fresher-->
    <string name="fresher_title">Manage Fresher</string>
    <string name="etHintSearch">Enter fresher name</string>
    <string name="tvSelectCategory">Select Programming language</string>
    <string name="btSearch">Search</string>
    <string name="dashboard">Total number of freshers: </string>
    <string name="val_img">Select picture, pls</string>
    <string name="val_name">Enter name, pls</string>
    <string name="val_email">Invalid email, pls</string>
    <string name="val_lang">Language cannot be empty or invalid</string>
    <string name="val_center">Center cannot be empty or invalid</string>
    <string name="val_dob">Invalid DoB</string>
    <string name="val_score">Enter score, pls</string>

    <!--    add fresher-->
    <string name="titleAddFragment">Add New Fresher</string>
    <string name="tvNameAddAc">Fresher Name</string>
    <string name="etNameAddAc">Enter fresher name</string>
    <string name="tvEmailAddAc">Fresher Email</string>
    <string name="etEmailAddAc">Enter fresher email</string>
    <string name="tvLangAddAc">Fresher Language</string>
    <string name="etLangAddAc">Enter fresher language</string>
    <string name="tvCenterAddAc">Center(Acronym)</string>
    <string name="etCenterAddAc">Enter center</string>
    <string name="tvDoBAddAc">Date of Birth</string>
    <string name="etDoBAddAc">Enter date of birth</string>
    <string name="tvPicAddAc">Select Picture</string>
    <string name="btConfirm">Confirm</string>
    <string name="btCancel">Cancel</string>

    <!--    edit delete-->
    <string name="titleEditFragment">Edit Fresher</string>
    <string name="btUpdate">Update</string>
    <string name="btDelete">Delete</string>
    <string name="tvScoreEdit">Score: </string>
    <string name="etScoreEdit">Enter 3 points</string>
    <string name="dialogDelTit">Delete Fresher</string>
    <string name="dialogDelMes">Are you sure to remove this person</string>
    <string name="dialogDelBtOk">OK</string>
    <string name="toastDelSuccess">Delete fresher successfully</string>

    <!--    center-->
    <string name="tittleManageCenter">Manage Center</string>
    <string name="dbCenter">Total number of centers:</string>
    <string name="etHintCenterSearch">Enter center name</string>

    <!--    dashboard-->
    <string name="tittleDashboard">Dashboard</string>

    <!--    add center-->
    <string name="tittleAddCenter">Add New Center</string>
    <string name="tittleEditCenter">Edit Center</string>
    <string name="tvCenterAcronym">Center Acronym</string>
    <string name="etCenterAcronym">Enter center acronym</string>
    <string name="tvCenterName">Center Name</string>
    <string name="etCenterName">Enter center name</string>
    <string name="tvCenterAddress">Center Address</string>
    <string name="etCenterAddress">Enter center address</string>
    <string name="val_acronym">Enter acronym, pls</string>
    <string name="val_address">Enter address, pls</string>

    <!--    edit center-->
    <string name="dialogDelCenTit">Delete Center</string>
    <string name="dialogDelCenMes">Are you sure to remove this center</string>

    <!--    details-->
    <string name="svFresher">Enter fresher email</string>

    <!--    profile-->
    <string name="personal_information">Personal information</string>
    <string name="contact_phone">+84888540843</string>
    <string name="contact_facebook">Contact us</string>
    <string name="logout">Logout</string>
    <string name="changePass">Change your password</string>
    <!--    programming language-->
    <string-array name="spProgramLang">
        <item>Java</item>
        <item>Node JS</item>
        <item>JS</item>
        <item>Python</item>
    </string-array>
    <string name="titleDetailsUser">Your Infomation</string>
    <string name="titleChangePass">Change your password</string>
    <string name="tvEmail">Email</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm pass</string>
    <string name="et_confirm_password">Confirm password</string>
    <string name="et_new_password">Enter your new password</string>
    <string name="et_old_password">Enter your old password</string>
    <string name="welcome">Welcome to my app</string>
    <string name="toast_center_exists">The center already exists!</string>
    <string name="toast_fresher_exists">The fresher email already exists!</string>

<!--    reciver-->
    <string name="add_new_fresher">Add new fresher:</string>
    <string name="edit_fresher">Updated fresher:</string>
    <string name="delete_fresher">Delete fresher:</string>
    <string name="add_new_center">Add new center:</string>
    <string name="edit_center">Updated center:</string>
    <string name="delete_center">Delete center:</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>