<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
            android:id="@+id/nav_manageFresher"
            android:title="@string/menu_manageFresher"
            android:icon="@drawable/ic_fresher"/>
        <item
            android:id="@+id/nav_manageCenter"
            android:title="@string/menu_manageCenter"
            android:icon="@drawable/ic_center"/>
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/menu_dashboard"
            android:icon="@drawable/ic_dashboard"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/profile"/>
</menu>