<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.FragmentChangePass">
    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/titleDetailsUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleChangePass"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/old_password"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_weight="2"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etOldPass"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bginputtask"
            android:hint="@string/et_old_password"
            android:inputType="text"
            android:paddingLeft="12dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="#B5B5B5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:textSize="18dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etNewPass"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bginputtask"
            android:hint="@string/et_new_password"
            android:inputType="text"
            android:paddingLeft="12dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="#B5B5B5"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_weight="2"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:background="@drawable/bginputtask"
            android:hint="@string/et_confirm_password"
            android:inputType="text"
            android:paddingLeft="12dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="#B5B5B5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btUpdatePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bgbuttoncreate"
            android:text="@string/btUpdate" />

        <Button
            android:id="@+id/btCancelPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bgbuttoncancel"
            android:text="@string/Cancel" />

    </LinearLayout>
</LinearLayout>