<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgadd"
    tools:context=".EditDeleteActivity">

    <TextView
        android:id="@+id/titlepageFR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/tittleEditCenter"
        android:textColor="#FFF"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvDetailsCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="#FFF"
        android:layout_marginLeft="250dp"
        android:text="View details"/>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAcronymCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvCenterAcronym"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEditAcronymCenter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/etCenterAcronym"
                android:inputType="text"
                android:maxLength="25"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEditNameCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvCenterName"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEditNameCenter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/etCenterName"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEditAddressCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvCenterAddress"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEditAddressCenter"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/etCenterAddress"
                android:paddingLeft="12dp"
                android:background="@drawable/bginputtask"/>
        </LinearLayout>

    <Button
        android:id="@+id/btUpdateCenterEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bgbuttoncreate"
        android:text="@string/btUpdate"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />

        <Button
        android:id="@+id/btDeleteCenterEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bgbuttondelete"
        android:text="@string/btDelete"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />


    <Button
        android:id="@+id/btCancelCenterEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bgbuttoncancel"
        android:text="@string/btCancel"
        android:textAllCaps="false"
        android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>